# omnispace

./: .gitignore  INICIO.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: gen-license.cjs
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: license.rtf
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: blocks.rs  categories.rs  files.rs  links.rs  mod.rs  notes.rs  pages.rs  spaces.rs  strokes.rs  tasks.rs
src/lib/: api.ts  types.ts
src/lib/components/: DeleteConfirmModal.svelte  DetachedView.svelte  IconPicker.svelte  SearchOverlay.svelte  SettingsModal.svelte  Sidebar.svelte  TutorialModal.svelte  Updater.svelte  WorkArea.svelte
src/lib/components/blocks/: Block.svelte  CalendarBlock.svelte  ClockBlock.svelte  FileBlock.svelte  LinkBlock.svelte  NoteBlock.svelte  PdfBookView.svelte  ShapeBlock.svelte  TaskBlock.svelte
src/lib/components/canvas/: CanvasShape.svelte  CanvasToolbar.svelte  PageCanvas.svelte  RecordAudioModal.svelte  RecordVideoModal.svelte  canvasDrawing.ts  canvasHistory.ts  canvasSnap.ts
src/lib/components/files/: FileViewer.svelte
src/lib/components/links/: LinkManager.svelte
src/lib/components/notes/: NoteEditor.svelte
src/lib/components/pomodoro/: PomodoroTimer.svelte
src/lib/components/tasks/: TaskList.svelte
src/lib/i18n/: translations.ts
src/lib/stores/: language.ts  pomodoro.ts  spaces.ts  theme.ts
